# AI-learning-companion

./: .gitignore  pyproject.toml  requirements.txt
backend/: alembic.ini  main.py
backend/agents/: feedback_agent.py  graph.py  orchestrator.py  progress_tracker.py  quiz_agent.py  state.py  tutor_agent.py
backend/alembic/: env.py
backend/alembic/versions/: 3e3d19aa9e5f_initial_schema.py
backend/api/: auth.py  sessions.py  user.py
backend/core/: config.py  dependencies.py  logger.py  security.py
backend/db/: database.py  models.py
backend/schemas/: session.py  user.py
frontend/src/components/: AuthLayout.tsx  ChatInput.tsx  ChatMessage.tsx  NewSessionModal.tsx  PasswordInput.tsx  ProgressBar.tsx  SessionCard.tsx  TypingIndicator.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts  auth.ts  types.ts
frontend/src/pages/: _document.tsx  dashboard.tsx  index.tsx  login.tsx  register.tsx
frontend/src/pages/session/: [id].tsx
frontend/src/styles/: globals.css
